deploy/k8s/gateway/micro-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ns-micro
  name: micro-api
  labels:
    name: micro-api
spec:
  ports:
  # the port that this service should serve on
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30000 # NodePort模式端口
  # label keys and values that must match in order to receive traffic for this service
  selector:
    name: micro-api
  type: LoadBalancer
